Bug 289223 - XMP sidecars not written for M2TS and MTS video files
Summary: XMP sidecars not written for M2TS and MTS video files
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Metadata-Sidecar (other bugs)
Version First Reported In: 2.3.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-17 18:06 UTC by anttiah
Modified: 2018-06-28 04:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description anttiah 2011-12-17 18:06:59 UTC
Version:           2.3.0 (using KDE 4.7.2) 
OS:                MS Windows

I have added m2ts and mts file types as additional movie file extensions in confuguration dialog (MIME Types). I have chosen "Write to XMP sidecar only" mode on Metadata tab of configuration dialog. It seems that I really can't get digiKam to create XMP sidecars for my m2ts video files.

XMP sidecars are created for my image file types (jpg, rw2, cr2) but not for my videos. 

Reproducible: Always

Steps to Reproduce:
Install digiKam 2.3.0 in Windows 7 64 bit and try to add XMP sidecars to your m2ts or mts video files.

Actual Results:  
All metadata (tags (=keywords), title, caption, pick label, color label, rating) is apparently stored only in digiKam database - not in sidecars for m2ts/mts files.

Expected Results:  
DigiKam should create XMP sidecars for mt2ts/mts video files (AVCHD) also.

I'm not sure if digiKam is meant to store metadata in XMP sidecars also for video files. So my report above is a bug or a feature request. I really hope digiKam could add XMP sidecars to any file type you like. =)
Comment 1 anttiah 2011-12-19 17:21:41 UTC
I think digiKam 2.2.0 added XMP sidecars for mts/m2ts files, but doesn't do this anymore in version 2.3.0.
Comment 2 caulier.gilles 2011-12-19 17:49:57 UTC
Are you sure. There is no difference between 2.2. and 2.3 about XMP sidecar management.

Gilles Caulier
Comment 3 anttiah 2011-12-19 18:20:36 UTC
I'm not 100 % sure. I would have to unistall 2.3.0 and reinstall 2.2.0... and so on. But my mind has a strong belief that I managed to create sidecars for MTS and M2TS files after I had added these file types as "additional movie extensions" in configuration dialog, when using 2.2.0 version.

Just tell me should XMP sidecars be created for mts/m2ts files in 2.3.0 version, if I have added these file types in configuration dialog and chosen setting "Write to XMP sidecar only"?!

XMP sidecars are nicely written for my photos (CR2, RW2, JPG) but not for my videos. I even tried to add mts/m2ts file types  as "additional IMAGE file extensions" with no help.

Ananta said he is working to get AVCHD thumbnails to be displayed in future Windows version of DigiKam, but it would be nice to get at least the XMP sidecars to work for mts/m2ts files.
Comment 4 anttiah 2011-12-20 16:31:28 UTC
Hi,

Before everyone starts his/her Christmas holiday, could someone kindly confirm if digiKam is meant to create XMP sidecars for every file type? (I mean file types currently supported and those added in MIME Types -tab of configuration dialog)

If XMP sidecars are currently created only for certain file types, are you going to extend this feature in near future for every file type user wants to?

I have a continuously growing collection of both digital photos and videos and would like to find a DAM tool for the job shortly.
Comment 5 anttiah 2011-12-24 16:59:12 UTC
Okay,

I tested this with v.2.2.0 digiKam in Windows and it wasn't able to create XMP sidecars for m2ts files. So I remembered probably wrong, when saying (comment #1 above) that v. 2.2.0 created sidecars for video files.
Comment 6 caulier.gilles 2011-12-27 16:58:55 UTC
yes, in theory, all files can be managed with XMP sidecar files.

Gilles Caulier
Comment 7 anttiah 2011-12-27 20:56:41 UTC
Excuse me Gilles, but could you be more spesific, please? Is it:

A) XMP-sidecars are created for every file type user wants to in Linux version of digiKam --> This is Windows version related bug.

B) Additional file types are added in Configuration dialog just so they can labeled, keyworded etc. in database ONLY--> XMP-sidecars are created currently only for fully supported still image files.

C) Something else??

Hopefully this gets fixed in next release of digiKam! =)
Comment 8 caulier.gilles 2011-12-27 21:06:20 UTC
yes all files managed by digiKam database.

Gilles Caulier
Comment 9 Marcel Wiesweg 2012-03-22 21:24:06 UTC
Git commit dc5992d18b9c4ff4fb2790187882635592e7b375 by Marcel Wiesweg.
Committed on 22/03/2012 at 22:21.
Pushed by mwiesweg into branch 'master'.

Do not completely fail load() if the file cannot be read: We should still try the sidecar.

In particular, store the file path regardless of success because writing a sidecar may
be possible even for unaccessible files

M  +1    -8    libkexiv2/kexiv2.cpp

http://commits.kde.org/libkexiv2/dc5992d18b9c4ff4fb2790187882635592e7b375
Comment 10 Marcel Wiesweg 2012-03-22 21:44:37 UTC
*** Bug 290072 has been marked as a duplicate of this bug. ***