Do not completely fail load() if the file cannot be read: We should still try the sidecar.

In particular, store the file path regardless of success because writing a sidecar may
be possible even for unaccessible files

BUG: 289223